manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testarck8s-service
spec:
  selector:
    app: testarck8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
