manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testarck8s-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: testarck8s.onpremvm.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testarck8s
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: testarck8s
                port:
                  number: 80
